--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title:            Site Title
-tagline:          A short tagline
-description:      Describe your website.
+title:            Abhi Nemani
+tagline:          
+description:      
 #Comment out url when working locally to resolve base urls correctly
 #url:              http://abhinemani.com
 
 # Owner/author information
 owner:
-  name:           Your Name
-  avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  name:           Abhi Nemani
+  avatar:         panda.png
+  bio:            "Amatuer mini-golfer, poor man's hacker & in-house philosopher."
+  email:          abhinemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:        
-  facebook:       
+  twitter:        abhinemani
+  facebook:       anemani10
   github:         
   linkedin:       
   instagram:      
@@ -36,9 +36,9 @@ links:
     url: /articles
   - title: Theme Setup
     url: /theme-setup
-  - title: Made Mistakes
-    url: http://mademistakes.com
-    external: true
+#  - title: Made Mistakes
+#    url: http://mademistakes.com
+#    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
