--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Abhi Nemani
 tagline:          
 description:      
 #Comment out url when working locally to resolve base urls correctly
-#url:              http://abhinemani.com
+url:              /blog/
 
 # Owner/author information
 owner:
