--- a/_config.yml
+++ b/_config.yml
@@ -32,16 +32,18 @@ bing_verify:
 links:
   - title: About
     url: /about
-  - title: Articles
-    url: /articles
-  - title: Theme Setup
-    url: /theme-setup
+  - title: Blog
+    url: /blog
+  - title: Press
+    url: /press
+  - title: Talks
+    url: /about#talks
 #  - title: Made Mistakes
 #    url: http://mademistakes.com
 #    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/San_Francisco
 future:      true
 pygments:    true
 markdown:    kramdown
