edited about and talks page, ccreated post template types

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ links:
   - title: Blog
     url: /blog
   - title: Talks
-    url: /about#talks
+    url: /talks
 #  - title: Made Mistakes
 #    url: http://mademistakes.com
 #    external: true
