added press section

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ links:
     url: /about
   - title: Blog
     url: /blog
+  - title: In the News
+    url: /press
   - title: Talks
     url: /talks
 #  - title: Made Mistakes
