--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,10 @@ links:
     url: /about
   - title: Press
     url: /press
-  - title: Blog
-    url: /blog
   - title: Talks
     url: /talks
+  - title: Archives
+    url: /blog
   - title: CV
     url: /cv
 #  - title: Made Mistakes
