Added Writing to header

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ links:
     url: /  
   - title: About
     url: /about
+  - title: Writing
+    url: http://medium.com/@abhinemani
+    external: true
   - title: Press
     url: /press
   - title: Talks
