--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
 owner:
   name:           Abhi Nemani
   avatar:         panda.png
-  bio:            "Amatuer mini-golfer, poor man's hacker & in-house philosopher."
+  bio:            "technological optimist and political philosophy nerd. writer, speaker, maker. "
   email:          abhinemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        abhinemani
