--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:            Abhi Nemani
-tagline:          
-description:      
+tagline:          technological optimist and political philosophy nerd. writer, speaker, maker.
+description:      Abhi Nemani is a writer, speaker, organizer, and technologist. He most recently served as the first Chief Data Officer for the City of Los Angeles, where he led the city's efforts to build an open and data-driven LA.
 #Comment out url when working locally to resolve base urls correctly
-#url:              /blog/
+url:              http://abhinemani.com
 
 # Owner/author information
 owner:
