--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ title:            Abhi Nemani
 tagline:          technological optimist and political philosophy nerd.
 description:      Abhi Nemani most recently served as the first Chief Data Officer for the City of Los Angeles
 #Comment out url when working locally to resolve base urls correctly
-url:              http://abhinemani.com
+#url:              http://abhinemani.com
 
 # Owner/author information
 owner:
   name:           Abhi Nemani
   avatar:         panda.png
-  bio:            "technological optimist and political philosophy nerd. writer, speaker, maker."
+  bio:            "technological optimist and political philosophy nerd. writer, speaker, hacker and maker."
   email:          abhinemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        abhinemani
@@ -30,8 +30,8 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: Home
-    url: /  
+#  - title: Home
+#    url: /  
   - title: Bio
     url: /about
   - title: Blog
@@ -52,7 +52,7 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/San_Francisco
 future:      true
-pygments:    true
+highlighter:    true
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
