--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ links:
   - title: Blog
     url: http://medium.com/@abhinemani
     external: true
-  - title: Press Clips
+  - title: Press
     url: /press
   - title: Talks
     url: /talks
