updated bio line

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:              http://abhinemani.com
 owner:
   name:           Abhi Nemani
   avatar:         panda.png
-  bio:            "technological optimist and political philosophy nerd. writer, speaker, hacker and maker."
+  bio:            "technological optimist and political philosophy nerd. writer, speaker, hacker and maker. alum: @lamayorsoffice, @codeforamerica, @google."
   email:          abhinemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        abhinemani
