--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
   name:           Abhi Nemani
   avatar:         panda.png
   bio:            "technological optimist and political philosophy nerd. writer, speaker, hacker and maker. alum: @lamayorsoffice, @codeforamerica, @google."
-  email:          abhinemani@gmail.com
+  email:          abhi.nemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        abhinemani
   facebook:       abhi.nemani
