--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ owner:
   linkedin:       abhinemani
   instagram:      abhinemani
   lastfm:         
-  tumblr:         abhinemani
+  tumblr:         
   # For Google Authorship https://plus.google.com/authorship
   google_plus:    
 
