--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Abhi Nemani
 tagline:          technological optimist and political philosophy nerd.
 description:      Abhi Nemani most recently served as the first Chief Data Officer for the City of Los Angeles
 #Comment out url when working locally to resolve base urls correctly
-url:              http://abhinemani.com
+url:              https://abhinemani.com
 
 # Owner/author information
 owner:
