updated bio and changed article indentation

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:              https://abhinemani.com
 owner:
   name:           Abhi Nemani
   avatar:         panda.png
-  bio:            "technological optimist and political philosophy nerd. writer, speaker, hacker and maker. founder, EthosLabs.us; fmr CIO, City of Sacramento; CDO, @lamayorsoffice; @codeforamerica; @google."
+  bio:            "public servant. poor man's hacker, writer, investor. founder, EthosLabs.us. prof, @uchicago. ex CDO LA; ex CIO Sacramento; ex ED @codeforamerica."
   email:          abhi.nemani@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        abhinemani
