--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ links:
   - title: Talks
     url: /talks
   - title: Lectures
-  	url: https://abhinemani.com/civictechcourse/lectures
+  	url: /civictechcourse/lectures
   - title: CV
     url: /cv
 #  - title: Made Mistakes
