--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ links:
   - title: Bio
     url: /about
   - title: Blog
-    url: http://medium.com/@abhinemani
+    url: http://abhinemani.com/civictechcourse/lectures
     external: true
   - title: Press
     url: /press
