--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Abhi Nemani
 tagline:          technological optimist and political philosophy nerd.
-description:      Abhi Nemani most recently served as the first Chief Data Officer for the City of Los Angeles
+description:      Abhi Nemani has been a leader in government and civic technology through open data and user-centric software for over a decade.
 #Comment out url when working locally to resolve base urls correctly
 url:              https://abhinemani.com
 
@@ -65,13 +65,11 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   enable_coderay: false
-
-  coderay:
-    coderay_line_numbers: 
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: class
+  line_numbers: 
+  line_numbers_start: 1
+  tab_width: 4
+  bold_every: 10
+  css: class
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
